--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
+    "socket": "^0.14.61",
     "socket.io": "^4.8.1"
   }
 }
